--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,7 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require jquery-ui
  *= require_tree .
  *= require_self
  */
@@ -24,3 +25,6 @@
     pointer-events: none;
     cursor: default;
 }
+
+@import "bootstrap-sprockets";
+@import "bootstrap";
