--- a/app/views/browse/index.html.erb
+++ b/app/views/browse/index.html.erb
@@ -1,8 +1,8 @@
 <html lang="en">
 <body>
-  <div class="jumbotron">
+  <div class="jumbotron" style="border-radius: 5px !important;">
     <div class="upper-search-box">
-      <div class="inner-search-bar col-md-12">
+      <div class="inner-search-bar col-md-12" style="width:100% !important; border-top-left-radius: 5px !important; border-top-right-radius: 5px !important;">
         <table cellpadding="0px" cellspacing="0px" class="col-md-12">
           <tr style="font-size:24px;">
             <td class="col-md-1"></td>
