--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,11 @@
 
 
 
-  <%= stylesheet_link_tag "bootstrap.min.css", :media => "screen, projection" %>
+  <%= stylesheet_link_tag "bootstrap.min.css", media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag('html5shiv.min.js') %>
   <%= javascript_include_tag('respond.min.js') %>
 
-  <%= stylesheet_link_tag "jquery-ui.css", :media => "screen, projection" %>
+  <%= stylesheet_link_tag "jquery-ui.css", media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag('jquery-1.10.2.js') %>
   <%= javascript_include_tag('jquery-ui.js') %>
 
