--- a/app/assets/stylesheets/browse.css.scss
+++ b/app/assets/stylesheets/browse.css.scss
@@ -16,6 +16,7 @@ td {
 	padding-top: 0px !important;
 	margin-right: 50px !important;
 	margin-left: 50px !important;
+	padding-bottom: 65px !important;
 }
 
 .search-form {
@@ -100,6 +101,7 @@ input#search{
 }
 
 .pagination {
+	margin-right: 10px !important;
 	background-color: transparent !important;
 	cursor: default;
 	height: 22px;
