allocated task rounded edges

--- a/app/views/allocated_tasks/index.html.erb
+++ b/app/views/allocated_tasks/index.html.erb
@@ -1,7 +1,7 @@
 <html lang="en">
-<div class="jumbotron allocated-task-bg">
-	<div class="textCenter">
-		<h2 class="title-banner">Allocated Tasks</h2>
+<div class="jumbotron allocated-task-bg" style="border-radius: 5px !important;">
+	<div class="textCenter" style="border-radius: 5px !important;">
+		<h2 class="title-banner" style="border-top-left-radius: 5px !important; border-top-right-radius: 5px !important;">Allocated Tasks</h2>
 
     </div>
 
