style in oppties' edit and show

--- a/app/views/oppties/show.html.erb
+++ b/app/views/oppties/show.html.erb
@@ -3,7 +3,7 @@
 <body>
 <div class="container">
   <!-- Main component for a primary marketing message or call to action -->
-  <div class="jumbotron oppty-bg">
+  <div class="jumbotron oppty-bg" style="padding-left:25px !important; padding-right:25px !important; padding-bottom:75px !important;">
     <h2 class="op-title"><%= @oppty.opptyName%></h2>
     <p><b>IDIQ CA:</b> <%= @oppty.idiqCA%></p>
     <p><b>Status:</b> <%= @oppty.status2%></p>
