--- a/app/views/oppties/edit.html.erb
+++ b/app/views/oppties/edit.html.erb
@@ -3,7 +3,7 @@
 		<h2 style="text-align: center; padding-top: 20px; padding-bottom: 20px;">Edit <%= @oppty.opptyName %></h2>
 
 		<%= render 'form' %>
-		<div class="margin: 25px 20px 20px 20px !important; min-height: 10px !important; visibility: hidden !important;">Formatting Hack</div>
-		<a class="btn btn-lg btn-primary btn-left oppty-btn bottom-button" href=<%=oppty_path%> role="button">Cancel</a>
+		
+		<a class="btn btn-lg btn-primary btn-left oppty-btn bottom-button" style="margin:25px !important;" href=<%=oppty_path%> role="button">Cancel</a>
 	</div>
 </div>
