--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,15 +11,13 @@
   <meta name="description" content="home">
   <%= favicon_link_tag '/favicon.ico' %>
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 
-
-  <%= stylesheet_link_tag "bootstrap.min.css", media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag('html5shiv.min.js') %>
-  <%= javascript_include_tag('respond.min.js') %>
-
-  <%= stylesheet_link_tag "jquery-ui.css", media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag('jquery-1.10.2.js') %>
-  <%= javascript_include_tag('jquery-ui.js') %>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
   <%= javascript_include_tag('bootstrap-notify.min.js') %>
   <%= javascript_include_tag('jquery.growl.js') %>
@@ -46,22 +44,19 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li id="username"><a>Welcome <%=session[:username] %></a></li>
-          <li class="tab nav-notifications">
-            <div id="accordion">
-              <!-- The bell icon which expands notification feed -->
-              <a href="javascript:;"><img src="/assets/notif-bell-2.png" name="notificationIcon" height="30" width="30" style="padding-bottom: 3px;"></a>
-              <!-- The expandable notifications feed -->
-              <div class="content">
-                <% if @notifications != nil %>
-                  <% @notifications.each do |o| %>
-                    <p><b>@notifications.title</b></p>
-                    <p>@notifications.message</p> 
-                  <%end%>
-                <%else%>
-                  <p style="text-align: center; padding-left: 10px !important;">No Notifications</p>  
+          <li class="tab dropdown" style="max-height: 50px !important;">
+            <a href="#" class="dropdown-toggle nav-notifications" data-toggle="dropdown" style="max-height: 50px !important;">
+              <img src="/assets/notif-bell-2.png" name="notificationIcon" height="30" width="30" style="padding-bottom: 3px;">
+            </a> 
+            <ul class="dropdown-menu" style="position: absolute !important; top: 49px !important; right: -25px !important; min-width: 300px !important;">
+              <% if @notifications != nil %>
+                <% @notifications.each do |o| %>
+                  <li class="notification-feed"><a href="#"><b><%=@notifications.title%></b><%=@notifications.message%></a></li>
                 <%end%>
-              </div>
-            </div>  
+              <%else%>
+                  <li style="text-align: center; padding-left: 10px !important;">No Notifications</li>  
+              <%end%>
+            </ul>
           </li>
           <li><a href=<%=sessions_destroy_path %>>Logout</a><li>
         </ul>
@@ -72,21 +67,12 @@
 <%= yield %>
 
 <style type="text/css">
-.nav-<%=controller.controller_name%> {
-  background-color: #e7e7e7;
-}
-
-.ui-accordion .ui-accordion-content {padding-left: 0 !important;}   
+  .nav-<%=controller.controller_name%> {
+    background-color: #e7e7e7;
+  }
 </style>
 
 <script>
-  $(function() {
-    $( "#accordion" ).accordion({
-      collapsible: true,
-      active: false
-    });
-  });
-
   /* creates style rule programmatically after triangle logo exists */
   function createClass(name,rules){
       var style = document.createElement('style');
@@ -97,21 +83,6 @@
       else
           style.sheet.insertRule(name+"{"+rules+"}",0);
   }
-
-  /* hides the triangle right logo */
-  createClass('html body nav div #navbar ul li  #accordion #ui-id-1 span.ui-accordion-header-icon.ui-icon.ui-icon-triangle-1-e',"display: none !important;");
-  /* hides the triangle down logo */
-  createClass('html body nav div #navbar ul li  #accordion #ui-id-1 span.ui-accordion-header-icon.ui-icon.ui-icon-triangle-1-s',"display: none !important;");
-  /* notification icon spacing */
-  createClass('html body nav div #navbar ul li  #accordion a#ui-id-1.ui-accordion-header.ui-state-default.ui-accordion-icons.ui-corner-top',"padding-left: .5em !important;");
-  /* notification icon spacing */
-  createClass('html body nav div #navbar ul li  #accordion a#ui-id-1.ui-accordion-header.ui-state-default.ui-accordion-icons.ui-corner-all',"padding-left: .5em !important;");
-  /* notification icon spacing */
-  createClass('html body nav div #navbar ul li  #accordion a#ui-id-1.ui-accordion-header.ui-state-default.ui-accordion-icons.ui-accordion-header-active.ui-state-active.ui-corner-top',"padding-left: .5em !important;");
-  /* notification icon background when not expanded */
-  createClass('html body nav div #navbar ul li  #accordion a#ui-id-1.ui-accordion-header.ui-state-default.ui-corner-all.ui-accordion-icons',"background-color: #f7f7f7 !important;  background-image: none !important;");
-  /* notification icon background when expanded */
-  createClass('html body nav div #navbar ul li  #accordion a#ui-id-1.ui-accordion-header.ui-state-default.ui-accordion-icons.ui-accordion-header-active.ui-state-active.ui-corner-top', "background-color: #f7f7f7 !important; background-image: none !important;");
 </script>
 
 </body>
