--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -17,15 +17,15 @@
           </tr>
         </table>
         <!-- Radio Buttons in History page to limit the search to opportunities within 30, 60, or 90 days -->
-        <table class="form col-md-12">
-          <tr>
-            <td class="col-md-1"></td>
-            <td class="col-md-2">
-              <label class="black-text field-label" style="padding-left:7px !important;">
+        <form role="form" class="form-inline col-md-12">
+          <div class="col-md-6 row">
+            <div class="col-md-1"></div>
+            <div class="col-md-4">
+              <label class="black-text field-label" style="padding-left:7px !important; float:right !important;">
                 Invalid Field:
               </label>
-            </td>
-            <td class="col-md-3">
+            </div>
+            <div class="col-md-6">
               <div>
                 <select class="selector col-md-10" id="invalidDiv" name="invalidDiv">
                   <option id="allInvalidFields" value="all">all</option>
@@ -36,21 +36,22 @@
                   <option id="slArchField" value="slArch">Solution Architect</option>
                   <option id="sllOrgField" value="sllOrg">Service Line Lead Organization</option>
                 </select>
-                <td>
+                <div class="col-md-1">
                   <a href="#" name="invalid-btn" class="btn btn-info btn-lg glyphicon selector-button control-label-button">&#xe092;</a>
-                </td>
+                </div>
               </div>  
-            </td>
-
+            </div>
+          </div>
             <!-- drop down menu in History Page to sort the opportunities by a specific field -->
-            <td class="col-md-2">
+            <div class="col-md-6 row">
+            <div class="col-md-4">
               <label class="black-text sort-dropdown-label">
                   Sort By:
               </label>
-            </td>
-            <td class="col-md-3">
+            </div>
+            <div class="col-md-6" style="padding:0px !important;">
               <div>
-                <select class="selector col-md-9" id="sorting" name="sorting">
+                <select class="selector col-md-10" id="sorting" name="sorting" style="padding:0px !important;">
                   <option id="opt1" value="none">none</option>
                   <option id="opt2" value="opptyName">Opportunity Name</option>
                   <option id="opt3" value="opptyId">Opportunity ID</option>
@@ -60,13 +61,14 @@
                   <option id="opt7" value="proposalMgr">Proposal Managers</option>
                   <option id="opt8" value="value">Value</option>
                 </select>
-                      
-                <a href="#" name="sort-btn" class="btn btn-info btn-lg glyphicon selector-button">&#xe092;</a>
+                
               </div>  
-            </td>
-            <td class="col-md-1"></td>
-          </tr>
-        </table>
+            </div>
+            <div class="col-md-1">   
+                  <a href="#" name="sort-btn" class="btn btn-info btn-lg glyphicon selector-button">&#xe092;</a>
+                </div>
+            <div class="col-md-1"></div>
+          </div>
       </div>    
       <br>
     </div>
