--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,9 +45,10 @@
         <ul class="nav navbar-nav navbar-right">
           <li id="username"><a>Welcome <%=session[:username] %></a></li>
           <li class="tab dropdown" style="max-height: 50px !important;">
-            <a href="#" class="dropdown-toggle nav-notifications" data-toggle="dropdown" style="max-height: 50px !important; padding-top: 10px !important;">
-              <img src="/assets/notif-bell-2.png" name="notificationIcon" height="35" width="35" style="padding-bottom: 4px;">
-              <div id="circle"><!--<%=@notifications.size %>-->18</div>
+            <a onclick="resetNotification(<%= session[:user_id]%>,'<%=application_resetNotification_url%>')" class="dropdown-toggle nav-notifications" data-toggle="dropdown" style="max-height: 50px !important; padding-top: 10px !important;">
+              <img src="/assets/notif-bell-2.png" name="notificationIcon" height="35" width="35" style="padding-bottom: 4px;"
+              </img>
+              <div id="circle"><%=@num_unseen_notification %></div>
             </a> 
             <ul class="dropdown-menu" style="position: absolute !important; top: 49px !important; right: -25px !important; min-width: 300px !important;">
               <% if @notifications.size > 0 %>
