--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,8 +58,8 @@
               <ul id="notification-scroll" class="notification-scroll">
                 <% if @notifications.size > 0 %>
                   <% @notifications.each do |o| %>
-                    <li class="notification-feed" style="padding-bottom: 15px !important;">
-                      <a href="#">
+                    <li class="notification-feed" style="padding-bottom: 15px !important;" onclick="sendFromNotification(<%= browse_index_path%>)">
+                      <a>
                         <p class="notify-title"><b><%=o.title%></b> <a class="notify-creation-date" style="float: right;"><%=o.created_at.to_date%></a><p>
                         <p><%=o.message%></p>
                       </a>
@@ -124,6 +124,10 @@
     xmlHttp.open("Connection", "close");
     xmlHttp.open( "Post", path, true );
     xmlHttp.send(params);
+  }
+
+  function sendFromNotification(destination) {
+    //location.href = '../' + destination;
   }
 
   $(function createScroll (){
