--- a/app/views/crm/index.html.erb
+++ b/app/views/crm/index.html.erb
@@ -7,17 +7,18 @@
 	  <div class="inner-column">
 		<h2 class="column-title">Upload</h2>
         <%if !@uploaded and !@oldOrNew.present?%>
-            <form id="upload" method="post" action="checkDate" enctype="multipart/form-data">
+            <form id="upload" method="post" action="calculateChanges" enctype="multipart/form-data">
                 <input type="file" id="upl" name="upl" class="file-input"/>
                 <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
-                <button class="btn btn-lg btn-primary btn-right btn-padded" type="submit">Check Date
+                <button class="btn btn-lg btn-primary btn-right btn-padded" type="submit">Upload
                   <span class="glyphicon glyphicon-upload"></span></button>
             </form>
         <%end%>
 	  </div>
       <%if @uploaded%>
-          <h3 class="filename"><%=@newFileName.gsub("new_", "").gsub("%20", " ")%></h3>
+          <h3 class="oldnew"><%=@newFileName.gsub("new_", "").gsub("%20", " ")%> is <%=@oldOrNew%><h3/>
           <br>
+
           <h4 class="add">Number of Added: <%=@added%><h4/>
           <h4 class="delete">Number of Deleted: <%=@deleted%><h4/>
           <h4 class="update">Number of Updates: <%=@changes.length.to_s%><h4/>
@@ -28,20 +29,10 @@
             <input hidden=true type="string" name="changes" value=<%= @changes.to_s.delete(' ')%>>
             <input hidden=true type="string" name="changedRFP" value=<%= @changedRFP.to_s.delete(' ')%>>
             <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
-            <button class="btn btn-lg btn-primary btn-right btn-padded" type="submit">Upload
+            <button class="btn btn-lg btn-primary btn-right btn-padded" type="submit">Submit
               <span class="glyphicon glyphicon-upload"></span></button>
           </form>
       <%end%>
-      <%if @oldOrNew.present?%>
-          <h4 class="oldnew"><%=@newFileName.gsub("new_", "").gsub("%20", " ")%> is <%=@oldOrNew%><h4/>
-            <form action ="calculateChanges" method="post">
-              <input hidden=true type="string" name="oldFileName" value=<%= @oldFileName%>>
-              <input hidden=true type="string" name="newFileName" value=<%= @newFileName%>>
-              <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
-              <button class="btn btn-lg btn-primary btn-right btn-padded" type="submit">Calculate Changes
-                <span class="glyphicon glyphicon-upload"></span></button>
-            </form>
-      <% end%>
     </div>
 
 	<div class="col-md-6 column-wrapper">
