--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,13 @@
   <meta name="description" content="home">
   <%= favicon_link_tag '/favicon.ico' %>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <%= stylesheet_link_tag "bootstrap.min.css", media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag('html5shiv.min.js') %>
+  <%= javascript_include_tag('respond.min.js') %>
 
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+  <%= stylesheet_link_tag "jquery-ui.css", media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag('jquery-1.10.2.js') %>
+  <%= javascript_include_tag('jquery-ui.js') %>
 
   <%= javascript_include_tag('bootstrap-notify.min.js') %>
   <%= javascript_include_tag('jquery.growl.js') %>
