--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,8 @@
   <%= javascript_include_tag('html5shiv.min.js') %>
   <%= javascript_include_tag('respond.min.js') %>
 
-  <%= stylesheet_link_tag "jquery-ui.css", media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag('jquery-1.10.2.js') %>
-  <%= javascript_include_tag('jquery-ui.js') %>
+  
 
-  <%= javascript_include_tag('bootstrap-notify.min.js') %>
-  <%= javascript_include_tag('jquery.growl.js') %>
 </head>
 <body class='<%=controller.controller_name%>'>
 <!-- Static navbar -->
@@ -58,7 +54,8 @@
                 <ul id="notification-scroll" class="notification-scroll">
                 <% if @notifications.size > 0 %>
                     <% @notifications.each do |o| %>
-                        <li onclick= "sendFromNotification()" class="notification-feed" style="padding-bottom: 15px !important;">
+                        <li onclick="sendFromNotification('<%= o.title%>', '<%= o.oppty_id %>')" 
+                          class="notification-feed" style="padding-bottom: 15px !important; cursor: pointer;">
                           <a href="#">
                             <p class="notify-title"><b><%=o.title%></b> <a class="notify-creation-date" style="float: right;"><%=o.created_at.to_date%></a><p>
                             <p><%=o.message%></p>
@@ -108,5 +105,55 @@
 
 <%= javascript_include_tag('jquery.slimscroll.min.js') %>
 
+<script>
+
+$(function(){
+    $('#notification-scroll').slimScroll({
+        height: '330px',
+        width: '300px'
+    });
+});
+
+function sendFromNotification(notify_title, oppty_id) {
+    /* Redirect to different places depending on the notification title */
+    if (notify_title == "RFP Date Changed") {
+        console.log("RFP Date Changed");
+        window.location = "/oppties/" + oppty_id;
+    } else if (notify_title == "Opportunity Moved To History") {
+        console.log("Opportunity Moved To History");
+        //location.href = '../' + destination;
+    } else if (notify_title == "Assigned To Task") {
+        console.log("Assigned To Task");
+        //location.href = '../' + destination;
+    }    
+}
+
+function resetNotification(user_id, path){
+    var notify_div=document.getElementById('circle');
+    if(notify_div!=null)
+        notify_div.remove();
+    var params = "{'user_id':"+user_id+"}";
+    params=params.replace(/'/g, '"');
+
+    //AJAX request
+    var xmlHttp = new XMLHttpRequest();
+    xmlHttp.open("Content-Type", "application/x-www-form-urlencoded");
+    xmlHttp.open("Content-length", params.length);
+    xmlHttp.open("Connection", "close");
+    xmlHttp.open( "Post", path, true );
+    xmlHttp.send(params);
+}
+
+/* creates style rule programmatically after triangle logo exists */
+function createClass(name,rules){
+    var style = document.createElement('style');
+    style.type = 'text/css';
+    document.getElementsByTagName('head')[0].appendChild(style);
+    if(!(style.sheet||{}).insertRule)
+        (style.styleSheet || style.sheet).addRule(name, rules);
+    else
+        style.sheet.insertRule(name+"{"+rules+"}",0);
+}
+</script>
 </body>
 </html>
